Update: Control for score-page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <span>Wordpad</span>
             </div>
             <div class="topbar-menu">
-                <div class="has-popup">
+                <div class="has-popup" id="score-btn">
                     <i class="fa-solid fa-chart-simple"></i>
                     <div class="popup-content">Skor terbaikmu!</div>
                 </div>
-                <div class="has-popup">
+                <div class="has-popup" id="share-btn">
                     <i class="fa-solid fa-share-nodes"></i>
                     <div class="popup-content">Menyukai Wordpad? Bagikan pada teman!</div>
                 </div>
