Update: Storing and loading record with local storage

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <span>Kau dewa kata?! Lihat seberapa hebat rekormu di sini — mulai dari skor, jumlah kata dan lainnya.</span>
             </div>
             <div id="record-content">
-                <div class="record-item">
+                <!-- <div class="record-item">
                     <div class="record-item-container">
                         <div class="record-item-point">
                             <i class="fa-solid fa-feather-pointed"></i>
@@ -150,7 +150,7 @@
                             <div class="numpad-item">P</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="score-footer">
                 <span>*hanya menyimpan rekor game harian</span>
