Fix: Style btn & progress bar update
[Fix} Progress bar wont update unless progress 100%

[Update] Image decoration bottom of nupad

--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
         </div>
     </div>
     <div class="footer-container fit">
+        <img src="./assets/decorator.png" alt="image decoration of word" />
         <div class="footer-content">
-            Rangkai kata menggunakan huruf yang disediakan. Harus mengandung huruf utama yang berada di bagian
-            tengah. Berapa kata yang dapat kamu rangkai?!
+            Rangkai kata dengan huruf yang disediakan. Harus mengandung huruf utama yang (bagian
+            tengah). Berapa kata yang dapat kamu rangkai?!
         </div>
         <div id="version">
             Wordpad v0.12
