Update: Boxy level dots & level name decoration

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                     <div class="level-bar-dots" id="level-5"></div>
                     <div class="level-bar-dots" id="level-6"></div>
                 </div>
-                <span id="level-name">Pemula</span>
+                <div id="level-name-wrapper">
+                    <div class="level-decorator">🎋</div>
+                    <div id="level-name">Pemula</div>
+                    <div class="level-decorator">🎋</div>
+                </div>
             </div>
         </div>
         <div class="word-container">
