Update: Decoration for level name

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <div class="level-bar-dots" id="level-6"></div>
                 </div>
                 <div id="level-name-wrapper">
-                    <div class="level-decorator">🎋</div>
+                    <div class="level-decorator"><img src="./assets/level_1.png" alt="image decoration for level" /></div>
                     <div id="level-name">Pemula</div>
-                    <div class="level-decorator">🎋</div>
+                    <div class="level-decorator flip"><img src="./assets/level_1.png" alt="image decoration for level" /></div>
                 </div>
             </div>
         </div>
