Style: Static size game-area

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <div class="header">
-        <div id="progress-bar"></div>
+        <div class="header__wrapper">
+            <div id="progress-bar"></div>
         <div class="header__content container">
             <div class="header__brand">
                 <img src="./assets/icon.png" alt="Wordpad Logo" />
@@ -34,6 +35,7 @@
                     <span><i class="fa-solid fa-circle-dot"></i> <span id="score">0</span></span>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     
