Update: Tooltip context on level-dots & score-btn

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
                 <span>Wordpad</span>
             </div>
             <div class="header__actions">
-                <div class="tooltip-trigger" id="score-btn">
+                <div class="tooltip-trigger" id="score-btn" data-tooltip="Skor terbaikmu!">
                     <i class="fa-solid fa-trophy"></i>
-                    <div class="tooltip">Skor terbaikmu!</div>
                 </div>
                 <!-- <div class="tooltip-trigger" id="share-btn">
                     <i class="fa-solid fa-share-nodes"></i>
