Update: Tooltip auto width w. &nbsp;

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span>Wordpad</span>
             </div>
             <div class="header__actions">
-                <div class="tooltip-trigger" id="score-btn" data-tooltip="Skor terbaikmu!">
+                <div class="tooltip-trigger" id="score-btn" data-tooltip="Skor&nbsp;terbaikmu!">
                     <i class="fa-solid fa-trophy"></i>
                 </div>
                 <!-- <div class="tooltip-trigger" id="share-btn">
