--- a/index.html
+++ b/index.html
@@ -22,16 +22,24 @@
                 <img src="./assets/icon.png" alt="Wordpad Logo" />
                 <span>Wordpad</span>
             </div>
+            <div class="level-indicator__display">
+                <div class="level-indicator__decorator level-indicator__decorator--flipped"> <!-- Font Awesome Icon --> </div>
+                <div id="level-name">Pemula</div>
+                <div class="level-indicator__decorator"> <!-- Font Awesome Icon --> </div>
+            </div>
             <div class="header__actions">
                 <div class="tooltip-trigger" id="score-btn" data-tooltip="Skor&nbsp;terbaikmu!">
                     <i class="fa-solid fa-trophy"></i>
+                    <div class="tooltip">Papan Skor</div>
+                    <br />
                 </div>
                 <!-- <div class="tooltip-trigger" id="share-btn">
                     <i class="fa-solid fa-share-nodes"></i>
                     <div class="tooltip">Menyukai Wordpad? Bagikan pada teman!</div>
                 </div> -->
-                <div class="score-display">
+                <div class="score-display tooltip-trigger" data-tooltip="">
                     <span><i class="fa-solid fa-circle-dot"></i> <span id="score">0</span></span>
+                    <div class="tooltip"></div>
                 </div>
             </div>
         </div>
@@ -46,11 +54,6 @@
                     <div class="progress-track__dots">
                         <!-- Progress dots -->
                     </div>
-                </div>
-                <div class="level-indicator__display">
-                    <div class="level-indicator__decorator level-indicator__decorator--flipped"> <!-- Font Awesome Icon --> </div>
-                    <div id="level-name">Pemula</div>
-                    <div class="level-indicator__decorator"> <!-- Font Awesome Icon --> </div>
                 </div>
             </div>
         </div>
