Update: Result comparing with 256 hash
Hash with sha256-uint8array library, big sets contain all words in KBBI, small sets contain hash for current game-set

--- a/index.html
+++ b/index.html
@@ -140,5 +140,6 @@
         </div>
     </div>
 
+    <script src="sha256-uint8array.js"></script>
     <script type="module" src="index.js"></script>
 </body>
