Update: Dark theme

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                     <div class="tooltip">Papan Skor</div>
                     <br />
                 </div>
+                <div class="tooltip-trigger" id="theme-btn" data-tooltip="Ganti&nbsp;Tema">
+                    <i class="fa-solid fa-palette"></i>
+                    <div class="tooltip">Ganti Tema</div>
+                    <br />
+                </div>
                 <!-- <div class="tooltip-trigger" id="share-btn">
                     <i class="fa-solid fa-share-nodes"></i>
                     <div class="tooltip">Menyukai Wordpad? Bagikan pada teman!</div>
@@ -89,7 +94,7 @@
                 Rekor Saya
             </div>
             <div class="score-modal__description">
-                <span>Kau dewa kata?! Lihat seberapa hebat rekormu di sini — mulai dari skor, jumlah kata dan lainnya.</span>
+                <span>Sedewa apa perbendaharaan katamu?!</span>
             </div>
             <div id="score-records" class="score-modal__records line-scrollbar">
                 <!-- record item -->
